fixing bug #1793, Don't display closed quizz result Clean also some code (sonar and kalisticks rules)