@@ -28,18 +28,18 @@
  */
 package com.stratelia.webactiv.quizz;
 
-import com.silverpeas.util.StringUtil;
-import com.silverpeas.util.web.servlet.FileUploadUtil;
-import com.stratelia.webactiv.quizz.control.QuizzSessionController;
-import com.stratelia.webactiv.util.FileRepositoryManager;
-import com.stratelia.webactiv.util.answer.model.Answer;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Date;
-import java.util.Iterator;
 import java.util.List;
+
 import org.apache.commons.fileupload.FileItem;
+
+import com.silverpeas.util.StringUtil;
+import com.silverpeas.util.web.servlet.FileUploadUtil;
+import com.stratelia.webactiv.util.FileRepositoryManager;
+import com.stratelia.webactiv.util.answer.model.Answer;
 
 /**
  * @author ehugonnet
@@ -51,8 +51,8 @@ public class QuestionHelper {
     boolean correctFile = false;
     if (fileName != null) {
       String logicalName = fileName.trim();
-      if ((logicalName != null) && (logicalName.length() >= 3) && (logicalName.indexOf(".") != -1)) {
-        String type = logicalName.substring(logicalName.indexOf(".") + 1, logicalName.length());
+      if ((logicalName != null) && (logicalName.length() >= 3) && (logicalName.indexOf('.') != -1)) {
+        String type = logicalName.substring(logicalName.indexOf('.') + 1, logicalName.length());
         if (type.length() >= 3) {
           correctFile = true;
         }
@@ -61,12 +61,10 @@ public class QuestionHelper {
     return correctFile;
   }
 
-  public static List<Answer> extractAnswer(List<FileItem> items,
-      QuestionForm form, String componentId, String subdir) throws IOException {
+  public static List<Answer> extractAnswer(List<FileItem> items, QuestionForm form,
+      String componentId, String subdir) throws IOException {
     List<Answer> answers = new ArrayList<Answer>();
-    Iterator iter = items.iterator();
-    while (iter.hasNext()) {
-      FileItem item = (FileItem) iter.next();
+    for (FileItem item : items) {
       String mpName = item.getFieldName();
       if (item.isFormField() && mpName.startsWith("answer")) {
         String answerInput = FileUploadUtil.getOldParameter(items, mpName, "");
@@ -74,8 +72,8 @@ public class QuestionHelper {
             0, false, null, null);
         String id = mpName.substring("answer".length());
         String nbPoints = FileUploadUtil.getOldParameter(items, "nbPoints" + id, "0");
-        answer.setNbPoints(new Integer(nbPoints).intValue());
-        if (new Integer(nbPoints).intValue() > 0) {
+        answer.setNbPoints(Integer.parseInt(nbPoints));
+        if (Integer.parseInt(nbPoints) > 0) {
           answer.setIsSolution(true);
         }
         String comment = FileUploadUtil.getOldParameter(items, "comment" + id, "");
@@ -103,9 +101,9 @@ public class QuestionHelper {
     if (QuestionHelper.isCorrectFile(item)) {
       // the part actually contained a file
       String logicalName = FileUploadUtil.getFileName(item);
-      String type = logicalName.substring(logicalName.indexOf(".") + 1, logicalName.length());
+      String type = logicalName.substring(logicalName.indexOf('.') + 1, logicalName.length());
       String physicalName =
-          new Long(new Date().getTime()).toString() + form.getAttachmentSuffix() + "." + type;
+          Long.valueOf(new Date().getTime()).toString() + form.getAttachmentSuffix() + "." + type;
       form.setAttachmentSuffix(form.getAttachmentSuffix() + 1);
       File dir =
           new File(FileRepositoryManager.getAbsolutePath(componentId) + subdir + File.separator +
